syntax = "proto3";

package service;

option go_package = "github.com/MuxSphere/microkit/proto";

service GreeterService {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}